// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`click test > should allow to left click on an element by passing a button type 1`] = `
{
  "actions": [
    {
      "button": 0,
      "duration": 100,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "type": "pointerMove",
      "x": 0,
      "y": 0,
    },
    {
      "button": 0,
      "type": "pointerDown",
    },
    {
      "button": 0,
      "type": "pointerUp",
    },
  ],
  "id": "action1",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to left click on an element by passing a button type 2`] = `
{
  "actions": [
    {
      "button": 0,
      "duration": 100,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "type": "pointerMove",
      "x": 0,
      "y": 0,
    },
    {
      "button": 0,
      "type": "pointerDown",
    },
    {
      "button": 0,
      "type": "pointerUp",
    },
  ],
  "id": "action2",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to left click on an element with an offset without passing a button type 1`] = `
[
  {
    "actions": [
      {
        "button": 0,
        "duration": 100,
        "origin": {
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 15,
      },
      {
        "button": 0,
        "type": "pointerDown",
      },
      {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "action7",
    "parameters": {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;

exports[`click test > should allow to middle click on an element 1`] = `
{
  "actions": [
    {
      "button": 0,
      "duration": 100,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "type": "pointerMove",
      "x": 0,
      "y": 0,
    },
    {
      "button": 1,
      "type": "pointerDown",
    },
    {
      "button": 1,
      "type": "pointerUp",
    },
  ],
  "id": "action5",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to middle click on an element 2`] = `
{
  "actions": [
    {
      "button": 0,
      "duration": 100,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "type": "pointerMove",
      "x": 0,
      "y": 0,
    },
    {
      "button": 1,
      "type": "pointerDown",
    },
    {
      "button": 1,
      "type": "pointerUp",
    },
  ],
  "id": "action6",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to right click on an element 1`] = `
{
  "actions": [
    {
      "button": 0,
      "duration": 100,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "type": "pointerMove",
      "x": 0,
      "y": 0,
    },
    {
      "button": 2,
      "type": "pointerDown",
    },
    {
      "button": 2,
      "type": "pointerUp",
    },
  ],
  "id": "action3",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to right click on an element 2`] = `
{
  "actions": [
    {
      "button": 0,
      "duration": 100,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "type": "pointerMove",
      "x": 0,
      "y": 0,
    },
    {
      "button": 2,
      "type": "pointerDown",
    },
    {
      "button": 2,
      "type": "pointerUp",
    },
  ],
  "id": "action4",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to right click on an element with an offset and passing a button type 1`] = `
{
  "button": 2,
  "type": "pointerDown",
}
`;
